properly committed updates this time

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="About KO_OP" />
     <meta property="og:site_name" content="KO_OP - About the Studio"/>
     <meta property="og:image" content="http://www.ko-opmode.com/images/share.png" />
-    <meta property="og:description" content="KO_OP is a game collective making unique and experimental games. Check out Please Don't, Spacedog! GNOG, and more." />
+    <meta property="og:description" content="Learn more about the team and projects at KO_OP." />
     <meta property="og:url" content="http://www.ko-opmode.com/">
     <meta property="og:type" content="game">
     <meta property="fb:admins" content="13616068" />
@@ -15,8 +15,8 @@
     <meta name="twitter:site" content="@koopmode">
     <meta name="twitter:creator" content="@koopmode">
     <meta name="twitter:title" content="KO_OP Mode">
-    <meta name="twitter:description" content="KO_OP Mode is a Montreal based collective of game developers working both independently and together to create unique and experimental games.">
-    <meta name="twitter:image" content="http://ko-opmode.com/images/share.png">
+    <meta name="twitter:description" content="Learn more about the team and projects at KO_OP.">
+    <meta name="twitter:image" content="http://www.ko-opmode.com/images/share.png">
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <!-- Typekit -->
