--- a/games.html
+++ b/games.html
@@ -16,7 +16,7 @@
     <meta name="twitter:creator" content="@koopmode">
     <meta name="twitter:title" content="KO_OP - Games">
     <meta name="twitter:description" content="KO_OP is an artist run & owned game making studio. Check out our upcoming game GNOG, releasing for PS4, Steam & iOS.">
-    <meta name="twitter:image" content="http://ko-opmode.com/images/share.png">
+    <meta name="twitter:image" content="http://www.ko-opmode.com/images/share.png">
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <!-- Typekit -->
@@ -231,7 +231,7 @@
         <!-- <img src="/images/gardenarium.png" class="img-responsive" width="100%"> -->
       </div>     
       <div class="col-sm-5 text-wrapper">
-        <p class="h1">GARDENARIUM</p>
+        <p class="h1" id="header4">GARDENARIUM</p>
         <p class="h5">By Paloma Dawkins & Kyler Kelly</p>
         <p>Gardenarium is a chill adventure taking place on a cloud in the sky. You land as a stranger and struggle to gain access to the mysterious Depot by picking up trash and making the land grow.</p>
         <div class="link-wrapper bottom-med-spacer"> 
@@ -333,7 +333,7 @@
       <a href="http://mlabgames.com"><img src="/images/mLab.png" height="30px" class="right-small-spacer"></a>
       <a href="http://criticalhitmontreal.ca"><img src="/images/critical.png" height="40px"></a> -->
    
-      <button class=" btn btn-custom" id="green"><a href="https://www.facebook.com/koopmode">FACEBOOK</a></button><button class="hidden-xs btn btn-custom" id="red">  <a href="https://twitter.com/koopmode">TWITTER</a></button><button class=" btn btn-custom" id="pink">  <a href="mailto:contact@ko-opmode.com">EMAIL</a></button><button class="btn btn-custom" id="blue">  <a href="http://presskit.ko-opmode.com">PRESSKIT</a></button>
+      <button class="hidden-xs  btn btn-custom" id="green"><a href="https://www.facebook.com/koopmode">FACEBOOK</a></button><button class="btn btn-custom" id="red">  <a href="https://twitter.com/koopmode">TWITTER</a></button><button class=" btn btn-custom" id="pink">  <a href="mailto:contact@ko-opmode.com">EMAIL</a></button><button class="btn btn-custom" id="blue">  <a href="http://presskit.ko-opmode.com">PRESSKIT</a></button>
 
         
       </div> 
@@ -366,6 +366,8 @@
     <script>jQuery("#header-games").fitText(1.2, { minFontSize: '40px', maxFontSize: '80px' });</script>
     <script>jQuery("#header2").fitText(1.2, { minFontSize: '35px', maxFontSize: '80px' } );</script>
     <script>jQuery("#header3").fitText(1.2, { minFontSize: '35px', maxFontSize: '80px' } );</script>
+    <script>jQuery("#header4").fitText(1.2, { minFontSize: '35px', maxFontSize: '80px' } );</script>
+
     <!-- Magnific Popup core JS file -->
     <script src="/bower_components/magnific-popup/dist/jquery.magnific-popup.js"></script>
     <script>
