--- a/workshops.html
+++ b/workshops.html
@@ -3,11 +3,11 @@
   <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KO_OP Workshops</title>
-    <meta name="Description" content="Learn how to create games and art with our super accesible workshops and tutorials">
+    <meta name="Description" content="Learn how to create games and art with our super accesible workshops and tutorials involving Unity, Sketchup, and Illustrator.">
     <meta property="og:title" content="KO_OP" />
     <meta property="og:site_name" content="KO_OP - Workshops"/>
     <meta property="og:image" content="http://www.ko-opmode.com/images/share.png" />
-    <meta property="og:description" content="KO_OP is an artist run & owned game making studio. Check out our upcoming game GNOG, releasing for PS4, Steam & iOS." />
+    <meta property="og:description" content="Learn how to create games and art with our super accesible workshops and tutorials involving Unity, Sketchup, and Illustrator." />
     <meta property="og:url" content="http://www.ko-opmode.com/">
     <meta property="og:type" content="game">
     <meta property="fb:admins" content="13616068" />
@@ -15,8 +15,8 @@
     <meta name="twitter:site" content="@koopmode">
     <meta name="twitter:creator" content="@koopmode">
     <meta name="twitter:title" content="KO_OP - Workshops">
-    <meta name="twitter:description" content="KO_OP is an artist run & owned game making studio. Check out our upcoming game GNOG, releasing for PS4, Steam & iOS.">
-    <meta name="twitter:image" content="http://ko-opmode.com/images/share.png">
+    <meta name="twitter:description" content="Learn how to create games and art with our super accesible workshops and tutorials involving Unity, Sketchup, and Illustrator.">
+    <meta name="twitter:image" content="http://www.ko-opmode.com/images/share.png">
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
