orchids website finished

--- a/orchids.html
+++ b/orchids.html
@@ -48,7 +48,7 @@
       }(document, 'script', 'facebook-jssdk'));
       </script>
 
-<div class="orchids-container">
+<div class="orchids-container bottom-large-spacer">
   <div class="container">
     <div class="row bottom-med-spacer">
       <div class="col-xs-12 top-med-spacer bottom-med-spacer" align="center">
@@ -61,14 +61,17 @@
       </div>
       <div class="col-md-5">
         <p class="h1">ABOUT THE GAME</p>
-        <p>Orchids to Dusk is a new game by <a href="">Pol Clarissou</a> with music by <a href="www.marskye.com">Marskye</a>. Explore an alien world. Become one with nature. Contemplate your existence. Created with the support of <span class="KO_OP2"><a href="/">KO_OP</a></span></p>
+        <p>Orchids to Dusk is a short contemplative wandering experience by <a href="">Pol Clarissou</a> with music by <a href="www.marskye.com">Marskye</a>. You are an astronaut stranded on an alien planet, with only a few minutes left to live. Created with the support of <span class="KO_OP2"><a href="/">KO_OP</a></span></p>
+        <p><a href="https://twitter.com/PolClarissou" class="twitter-follow-button" data-show-count="false" data-size="large"></a>
+        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></p>
+        <p><a href="https://twitter.com/KOOPmode" class="twitter-follow-button" data-show-count="false" data-size="large"></a>
+        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></p>
       </div>
       <div class="col-md-5 col-md-offset-1">
       <p class="h1">DOWNLOAD</p>
-        <iframe src="//itch.io/embed/25393" width="552" height="167" frameborder="0"></iframe>
+        <iframe src="//itch.io/embed/40415" width="552" height="167" frameborder="0"></iframe>
       </div>
-      <div class="col-xs-12" align="left">
-        <p class="h1">SCREENSHOTS</p>
+      <div class="col-xs-12 top-small-spacer" align="left">
 
       </div>
       <div class="col-sm-4 bottom-small-spacer">
@@ -80,16 +83,28 @@
       <div class="col-sm-4 bottom-small-spacer">
         <img src="/images/orchids/orchids3.gif" class="img-responsive">
       </div>
-      <div class="col-sm-4">
+      <div class="col-sm-4 bottom-small-spacer">
         <img src="/images/orchids/orchids4.gif" class="img-responsive">
       </div>
-      <div class="col-sm-4">
+      <div class="col-sm-4 bottom-small-spacer">
         <img src="/images/orchids/orchids5.gif" class="img-responsive">
+      </div>
+            <div class="col-sm-4 bottom-small-spacer">
+        <img src="/images/orchids/orchids6.gif" class="img-responsive">
+      </div>
+      <div class="col-xs-6 more">
+      <p>More screenshots here: <a href="https://twitter.com/_/timelines/630219130478723072">Twitter Timeline</a></p>
+
+      </div>
+      <div class="col-xs-6 more pull-right" align="right">
+      <p><a id="contact" href="http://presskit.ko-opmode.com">Presskit</a>  <a href="mailto:contact@ko-opmode.com">Email</a></p>
       </div>
       
     </div>
   </div>
+  
 </div>
+
 
 
 
