--- a/orchids.html
+++ b/orchids.html
@@ -3,20 +3,20 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orchids to Dusk</title>
-    <meta name="Description" content="">
+    <meta name="Description" content="Orchids to Dusk is a short networked wandering experience. You are an astronaut stranded on an alien planet, with only a few minutes left to live. Download now for free">
     <meta property="og:title" content="Orchids to Dusk" />
     <meta property="og:site_name" content="Orchids to Dusk"/>
-    <meta property="og:image" content="" />
-    <meta property="og:description" content="" />
+    <meta property="og:image" content="http://www.ko-opmode.com/images/orchids/orchids2.gif" />
+    <meta property="og:description" content="Orchids to Dusk is a short networked wandering experience. You are an astronaut stranded on an alien planet, with only a few minutes left to live. Download now for free" />
     <meta property="og:url" content="http://www.ko-opmode.com/orchids">
     <meta property="og:type" content="game">
     <meta property="fb:admins" content="13616068" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@koopmode">
     <meta name="twitter:creator" content="@PolClarissou">
-    <meta name="twitter:title" content="KO-OP Mode">
-    <meta name="twitter:description" content="">
-    <meta name="twitter:image:src" content="">
+    <meta name="twitter:title" content="Orchids to Dusk">
+    <meta name="twitter:description" content="Orchids to Dusk is a short networked wandering experience. You are an astronaut stranded on an alien planet, with only a few minutes left to live. Download now for free">
+    <meta name="twitter:image" content="http://www.ko-opmode.com/images/orchids/orchids2.gif">
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <!-- Typekit -->
