--- a/orchids.html
+++ b/orchids.html
@@ -61,7 +61,7 @@
       </div>
       <div class="col-md-5">
         <p class="h1">ABOUT THE GAME</p>
-        <p>Orchids to Dusk is a short contemplative wandering experience by <a href="">Pol Clarissou</a> with music by <a href="www.marskye.com">Marskye</a>. You are an astronaut stranded on an alien planet, with only a few minutes left to live. Created with the support of <span class="KO_OP2"><a href="/">KO_OP</a></span></p>
+        <p>Orchids to Dusk is a short contemplative wandering experience by <a href="http://polclarissou.com/">Pol Clarissou</a> with music by <a href="http://www.marskye.com">Marskye</a>. You are an astronaut stranded on an alien planet, with only a few minutes left to live. Created with the support of <span class="KO_OP2"><a href="/">KO_OP</a></span></p>
         <p><a href="https://twitter.com/PolClarissou" class="twitter-follow-button" data-show-count="false" data-size="large"></a>
         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script></p>
         <p><a href="https://twitter.com/KOOPmode" class="twitter-follow-button" data-show-count="false" data-size="large"></a>
@@ -97,7 +97,7 @@
 
       </div>
       <div class="col-xs-6 more pull-right" align="right">
-      <p><a id="contact" href="http://presskit.ko-opmode.com">Presskit</a>  <a href="mailto:contact@ko-opmode.com">Email</a></p>
+      <p><a id="contact" href="http://presskit.ko-opmode.com/sheet.php?p=orchids_to_dusk">Presskit</a>  <a href="mailto:contact@polclarissou.com">Email</a></p>
       </div>
       
     </div>
