orchids to dusk live

--- a/games.html
+++ b/games.html
@@ -206,22 +206,21 @@
 <!-- Orchids -->
 
 
-<!--   <div class="orchids">
+  <div class="orchids">
     <div class="row">
-      <div class="col-sm-5 top-xlarge-spacer bottom-xlarge-spacer text-wrapper">
-        <p class="h1 top-xlarge-spacer">ORCHIDS TO DUSK</p>
+      <div class="col-sm-5 top-large-spacer bottom-large-spacer text-wrapper">
+        <p class="h1 top-xlarge-spacer" id="header5">ORCHIDS TO DUSK</p>
         <p class="h5">By Pol Clarissou</p>
-        <p>Spacedog! is an exhibition only Oculus VR game controlled by an AKAI LPD8.</p>
+        <p>Orchids to Dusk is a networked contemplative wandering experience where you’re an astronaut stranded on an alien planet, with only a few minutes left to live.</p>
         <div class="link-wrapper bottom-med-spacer"> 
-            <p><a class="btn btn-default btn-lg" href="http://spacedog.ko-opmode.com">Get it now</a></p>
-            <p><a class="btn btn-default btn-lg" href="/orchids">Vist the website</a></p>
+            <p><a class="btn btn-default btn-lg" href="/orchids">Download for free</a></p>
         </div>
       </div>
       <div class="col-sm-7">
       </div>
 
     </div>
-  </div> -->
+  </div>
 
 <!-- Gardenarium -->
 
@@ -367,6 +366,7 @@
     <script>jQuery("#header2").fitText(1.2, { minFontSize: '35px', maxFontSize: '80px' } );</script>
     <script>jQuery("#header3").fitText(1.2, { minFontSize: '35px', maxFontSize: '80px' } );</script>
     <script>jQuery("#header4").fitText(1.2, { minFontSize: '35px', maxFontSize: '80px' } );</script>
+    <script>jQuery("#header5").fitText(1.2, { minFontSize: '35px', maxFontSize: '80px' } );</script>
 
     <!-- Magnific Popup core JS file -->
     <script src="/bower_components/magnific-popup/dist/jquery.magnific-popup.js"></script>
