--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
 
 <!-- lead orchids -->
-<!-- <div class="lead">
+<div class="lead">
   <div class="container">
     <div class="row">
       <div class="col-xs-12 top-large-spacer bottom-med-spacer" align="center">
@@ -136,7 +136,7 @@
     </div>  
   </div>
 </div>
- -->
+
 
 <!-- GNOG Header -->
 <div class="header" align="center">
