fixed fullscreen bug with youtube embed

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 
       <div class="col-sm-8 col-sm-offset-2 col-xs-12">
           <div class="embed-responsive embed-responsive-16by9">
-            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/CWqamSu3qFA?rel=0"></iframe>
+            <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/CWqamSu3qFA?rel=0" allowfullscreen></iframe>
           </div>
         </div>
       
