fixed typos and other small changes

--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12" align="let">
-        <p><span class="KO_OP2">KO_OP</span> is an artist run and owned studio. Founded in 2012, we've been experiminting with games and interactive art ever since. In 2014 we established the <strong class="yellow">KOLAB</strong> fund, a small stipend for outside artists to make games with our help.</p>
+        <p><span class="KO_OP2">KO_OP</span> is an artist run and owned studio. Founded in 2012, we've been experimenting with games and interactive art ever since. In 2014 we established the <strong class="yellow">KOLAB</strong> fund, a small stipend for outside artists to make games with our help.</p>
        <div class="hidden-xs bottom-large-spacer"></div>
        <div class="visible-xs bottom-small-spacer"></div>
       </div>
