fixed some placeholder text that got through

--- a/games.html
+++ b/games.html
@@ -87,7 +87,7 @@
       <div class="col-sm-12" align="center">
        <div class="top-large-spacer bottom-large-spacer">  
         <p id="header-games" align="center"><span id="our">GAMES</span></p>
-        <p>STRANGE AND PLAYFUL, UNLIKE ANYTHING YOU'VE EVER SEEN</p>
+        <p>STRANGE AND PLAYFUL</p>
       </div>
       </div>
       </div>
