changed contact info on gardenarium site to paloma

--- a/gardenarium.html
+++ b/gardenarium.html
@@ -85,7 +85,7 @@
           <p>Gardenarium is a chill adventure taking place on a cloud in the sky. You land as a stranger and struggle to gain access to the mysterious Depot by picking up trash and making the land grow.</p>
           <p>Gardenarium is made by <a href="http://www.palomadawkins.ca">Paloma Dawkins</a> and <a href="https://twitter.com/kylerwk">Kyler Kelly</a> with the support of <a href="http://www.ko-opmode.com">KO-OP</a>. Music by <a href="https://ylangylang.bandcamp.com">Ylang Ylang</a>.</p>
           <div class="bottom-xsmall-spacer"></div>
-          <p>-<a href="http://presskit.ko-opmode.com/sheet.php?p=gardenarium">Presskit & Contact</a></p>
+          <p>-<a href="mailto:palomadawkins@gmail.com">Contact</a></p>
           <p>-Follow Paloma: <a href="https://twitter.com/palomadawkins" class="twitter-follow-button" data-show-count="false">Follow @palomadawkins</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script> </p>
           <p>-Follow KO-OP: <a href="https://twitter.com/KOOPmode" class="twitter-follow-button" data-show-count="false">Follow @KOOPmode</a>
