--- a/generic-ko-op-template.html
+++ b/generic-ko-op-template.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KO-OP Mode - Experimental Game Collective</title>
-    <meta name="Description" content="KO-OP is a game collective making unique and experimental games. Check out Please Don't, Spacedog! GNOG, Fledge, and more.">
-    <meta property="og:title" content="KO-OP Mode" />
-    <meta property="og:site_name" content="KO-OP - Experimental Game Collective"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>KO_OP</title>
+    <meta name="Description" content="KO_OP is an artist run & owned game making studio. Check out our upcoming game GNOG, releasing for PS4, Steam & iOS.">
+    <meta property="og:title" content="KO_OP" />
+    <meta property="og:site_name" content="KO_OP - Artist Run Game Studio"/>
     <meta property="og:image" content="http://www.ko-opmode.com/images/share.png" />
-    <meta property="og:description" content="KO-OP is a game collective making unique and experimental games. Check out Please Don't, Spacedog! GNOG, and more." />
+    <meta property="og:description" content="KO_OP is an artist run & owned game making studio. Check out our upcoming game GNOG, releasing for PS4, Steam & iOS." />
     <meta property="og:url" content="http://www.ko-opmode.com/">
     <meta property="og:type" content="game">
     <meta property="fb:admins" content="13616068" />
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@koopmode">
     <meta name="twitter:creator" content="@koopmode">
-    <meta name="twitter:title" content="KO-OP Mode">
-    <meta name="twitter:description" content="KO-OP Mode is a Montreal based collective of game developers working both independently and together to create unique and experimental games.">
-    <meta name="twitter:image:src" content="http://ko-opmode.com/images/facebookshare.jpg">
+    <meta name="twitter:title" content="KO_OP Mode">
+    <meta name="twitter:description" content="KO_OP is an artist run & owned game making studio. Check out our upcoming game GNOG, releasing for PS4, Steam & iOS.">
+    <meta name="twitter:image" content="http://www.ko-opmode.com/images/share.png">
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
     <!-- Typekit -->
@@ -58,7 +58,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" id="black" href="#"><img src="/images/ko-op-cory-bw.png" class=" img-responsive" width="110"></a>
+      <a class="navbar-brand" href="/"><img src="/images/KO_OP-logo-colour.svg" class=" img-responsive" width="160"></a>
 
     </div>
     <!-- <div class="top-xsmall-spacer"></div> -->
@@ -67,17 +67,14 @@
       
   
       <ul class="nav navbar-nav navbar-right">
-        <li class="hvr-sweep-to-right" id="yellow"><a  href="/games">GAMES</a></li>
-        <li class="hvr-buzz" id="red"><a target="_blank" href="https://medium.com/@KO_OP">BLOG</a></li>
-        <!-- <li><a href="/store">Store</a></li> -->
-        <!-- <li><a href="/kolab">KOLAB</a></li> -->
-        <li class="hvr-buzz" id="pink"><a href="/workshops">WORKSHOPS</a></li>
-        <li  class="hvr-buzz" id="green"><a href="/about">POKO_Dome</a></li>
-        <li class="hvr-buzz" id="blue"><a href="/about">ABOUT</a></li>
-
-
-        <!-- <li><a href="/podcast">Podcast</a></li> -->
-        <!-- <li><a href="">Fr</a></li> -->
+        <li id="green"><a  href="/games">GAMES</a></li>
+        <li id="red"><a target="_blank" href="https://medium.com/@KO_OP">BLOG</a></li>
+        <!-- <li id="yellow"><a href="/kolab">KOLAB</a></li> -->
+        <li id="pink"><a href="/workshops">WORKSHOPS</a></li>
+        <!-- <li  class="hvr-buzz" id="green"><a href="/poko_dome">POKO_Dome</a></li> -->
+        <li id="blue"><a href="/about">ABOUT</a></li>
+        <!-- <li><a href="/"  data-toggle="tooltip" data-placement="bottom" title="Français 
+">Fr</a></li>-->
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
