removed the 'we're hiring' from all our pages

--- a/games.html
+++ b/games.html
@@ -361,7 +361,7 @@
 
 
     <div class="col-md-3 " align="left">
-      <p class="h1">We're Hiring</p>
+      <p class="h1">Opportunities</p>
         <!-- <p><a href="/conduct">Conduct</a></p> -->
         <p><a href="/jobs">Jobs</a></p>
     </div>
