--- a/workshops.html
+++ b/workshops.html
@@ -169,7 +169,7 @@
     </div>
 
     <div class="col-md-3 " align="left">
-      <p class="h1">We're Hiring</p>
+      <p class="h1">Opportunities</p>
         <!-- <p><a href="/conduct">Conduct</a></p> -->
         <p><a href="/jobs">Jobs</a></p>
     </div>
