updated KO_OP homepage with gnog preorder

--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
           <p class="h1">GNOG is launching on <br>PS4 and PS VR</p>
     </div>
     <div class="col-xs-12 bottom-med-spacer">
-         <a class="popup-youtube" href="https://www.youtube.com/watch?v=lzTWg0sGVh4"><button type="button" class="btn trailerbutt">Watch the trailer</button></a>
+         <a class="popup-youtube" href="https://www.youtube.com/watch?v=tNyaYZh39z8"><button type="button" class="btn trailerbutt">Watch the trailer</button></a>
+          <a class="" target="_blank" href="https://store.playstation.com/#!/en-us/games/gnog/cid=UP0399-CUSA04641_00-000000000GNOGPS4"><button type="button" class="btn preorderbutt">Preorder Now for PS4</button></a>
     </div>
     <div class="col-xs-12" align="center">
       <p>Coming later to <span><strong>Steam</strong></span> & <span><strong>iOS</span></strong></p>
