Added LCGO and Store links

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <li><a id="red" target="_blank" href="https://medium.com/ko-op-words">BLOG</a></li>
         <!-- <li id="yellow"><a href="/kolab">KOLAB</a></li> -->
         <li><a id="pink" href="/workshops">WORKSHOPS</a></li>
-        <!-- <li  class="hvr-buzz" id="green"><a href="/poko_dome">POKO_Dome</a></li> -->
+        <li><a id="yellow" href="http://koopshop.bigcartel.com" target="_blank">SHOP</a></li>
         <li><a id="blue" href="/about">ABOUT</a></li>
         <!-- <li><a href="/"  data-toggle="tooltip" data-placement="bottom" title="Français 
 ">Fr</a></li>-->
@@ -131,7 +131,22 @@
     </div>
   </div>
 </div>
-
+<!-- Lead LCGO -->
+<div class="lcgo-homepage bottom-large-spacer">
+  <div class="container">
+    <div class="row">
+      <div class="lcgo-lead col-xs-12 top-med-spacer bottom-med-spacer" align="center">
+        <p class="h1">Lara Croft GO: The Mirror of Spirits<br> Available now for PlayStation 4 and Vita</p>
+        <p class="top-med-spacer bottom-small-spacer">An all new adventure created by <span class="KO_OP">KO_OP</span> for the hit puzzle game</p>
+        <p class="top-med-spacer">Coming soon to iOS, Android, & Steam</p>
+        <a class="popup-youtube" href="https://www.youtube.com/watch?v=wQptvhwRa5A"><button type="button" class="btn lcgo-btn">Watch the trailer</button></a>
+      <div class="bottom-xsmall-spacer visible-xs"></div>
+      <a href="https://store.playstation.com/#!/en-us/games/lara-croft-go/cid=UP0082-CUSA06460_00-LARACROFTGOSIEA0" target="_blank"><button type="button" class="btn lcgo-btn">Play Now</button></a>
+      </div>
+    </div>
+    
+  </div>
+</div>
 <!-- lead orchids -->
 <div class="orchids-homepage bottom-large-spacer">
   <div class="container">
