--- a/jobs.html
+++ b/jobs.html
@@ -72,6 +72,7 @@
         <!-- <li id="yellow"><a href="/kolab">KOLAB</a></li> -->
         <li><a id="pink" href="/workshops">WORKSHOPS</a></li>
         <!-- <li  class="hvr-buzz" id="green"><a href="/poko_dome">POKO_Dome</a></li> -->
+         <li><a id="yellow" href="http://koopshop.bigcartel.com" target="_blank">SHOP</a></li>
         <li><a id="blue" href="/about">ABOUT</a></li>
         <!-- <li><a href="/"  data-toggle="tooltip" data-placement="bottom" title="Français 
 ">Fr</a></li>-->
@@ -90,7 +91,7 @@
       <div class="col-sm-8 col-sm-offset-2 jobs-intro top-large-spacer" align="left">
        <p>We're not currently hiring.</p> 
 
-       <p>That said, we're always on the lookout for new collaborators for future projects, so plesae don't hesitate to get in touch and tell us a bit about yourself. We're espcially keen to hear from programmer/designers and artists. </p>
+       <p>That said, we're always on the lookout for new collaborators for future projects, so please don't hesitate to get in touch and tell us a bit about yourself. We're especially keen to hear from programmer/designers and artists. </p>
 
        <p>You can reach us at this email address for sending in CVs/Portfolios: <a href="mailto:jobs@ko-opmode.com">Jobs Email</a></p> 
 
