--- a/workshops.html
+++ b/workshops.html
@@ -73,6 +73,7 @@
         <!-- <li id="yellow"><a href="/kolab">KOLAB</a></li> -->
         <li><a id="pink" href="/workshops">WORKSHOPS</a></li>
         <!-- <li  class="hvr-buzz" id="green"><a href="/poko_dome">POKO_Dome</a></li> -->
+         <li><a id="yellow" href="http://koopshop.bigcartel.com" target="_blank">SHOP</a></li>
         <li><a id="blue" href="/about">ABOUT</a></li>
         <!-- <li><a href="/"  data-toggle="tooltip" data-placement="bottom" title="Français 
 ">Fr</a></li>-->
