updated homepage GNOG text and bg image

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta property="og:title" content="KO_OP" />
     <meta property="og:site_name" content="KO_OP - Artist Run Game Studio"/>
     <meta property="og:image" content="http://www.ko-opmode.com/images/share.png" />
-    <meta property="og:description" content="KO_OP is an artist run & owned game making studio. Check out our upcoming game GNOG, releasing for PS4, Steam & iOS." />
+    <meta property="og:description" content="KO_OP is an artist run & owned game making studio. Check out our game GNOG, releasing for PS4, Steam & iOS." />
     <meta property="og:url" content="http://www.ko-opmode.com/">
     <meta property="og:type" content="game">
     <meta property="fb:admins" content="13616068" />
@@ -15,7 +15,7 @@
     <meta name="twitter:site" content="@koopmode">
     <meta name="twitter:creator" content="@koopmode">
     <meta name="twitter:title" content="KO_OP Mode">
-    <meta name="twitter:description" content="KO_OP is an artist run & owned game making studio. Check out our upcoming game GNOG, releasing for PS4, Steam & iOS.">
+    <meta name="twitter:description" content="KO_OP is an artist run & owned game making studio. Check out our game GNOG, releasing for PS4, Steam & iOS.">
     <meta name="twitter:image" content="http://www.ko-opmode.com/images/share.png">
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png">
@@ -88,15 +88,16 @@
     <div class="row bottom-large-spacer">
     
     <div class="col-xs-12 top-large-spacer bottom-med-spacer" align="center">
-          <p class="h1">GNOG is launching on <br>PS4 and PS VR</p>
+          <p class="h1"><span>GNOG is out now on</span> <br><span>PS4 and PS VR</span></p>
+          <p class="top-med-spacer"><span>"This is such a joyful game, I'm not sure it's possible to leave it without feeling uplifted." - Destructoid</span></p>
     </div>
     <div class="col-xs-12 bottom-med-spacer">
-         <a class="popup-youtube" href="https://www.youtube.com/watch?v=tNyaYZh39z8"><button type="button" class="btn trailerbutt">Watch the trailer</button></a>
-          <a class="" target="_blank" href="https://store.playstation.com/#!/en-us/games/gnog/cid=UP0399-CUSA04641_00-000000000GNOGPS4"><button type="button" class="btn preorderbutt">Preorder Now for PS4</button></a>
+         <a class="popup-youtube" href="https://www.youtube.com/watch?v=f4OuKFIIhHs?rel=0"><button type="button" class="btn trailerbutt">Watch the trailer</button></a>
+          <a class="" target="_blank" href="https://store.playstation.com/#!/en-us/games/gnog/cid=UP0399-CUSA04641_00-GNOGPS4000000000"><button type="button" class="btn preorderbutt">Buy Now for PS4</button></a>
     </div>
     <div class="col-xs-12" align="center">
-      <p>Coming later to <span><strong>Steam</strong></span> & <span><strong>iOS</span></strong></p>
-      <img src="/images/laurels-gnog-white.png" class="img-responsive top-med-spacer bottom-med-spacer" width="100%">
+      <p><span>Coming soon to<strong> Steam</strong> & <strong>iOS</span></strong></span></p>
+      <img src="/images/laurels-gnog-pink.png" class="img-responsive top-med-spacer bottom-med-spacer" width="100%">
 
     </div>
       
@@ -116,7 +117,7 @@
         </div>
       </div> -->
       <div class="col-xs-12" align="center">
-          <a href="http://www.gnoggame.com">Visit the website</a>
+         <span> <a href="http://www.gnoggame.com">Visit the website</a></span>
       </div>
     </div>
   </div>
