--- a/about.html
+++ b/about.html
@@ -143,7 +143,7 @@
       <div class="col-sm-4">
        <img src="/images/nick.png" class="img-responsive" width="150px">
        <p><strong>Nick Rudzicz</strong> is a <span class="KO_OP2">KO_OP</span> programmer and designer. He keeps the GNOG heads happy and well-oiled.</p>
-       <a href="https://twitter.com/newton64" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @newton64</a>
+       <a href="https://twitter.com/nickfourtimes" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @nickfourtimes</a>
         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
       </div>
       <div class="col-sm-4">
